# Founder-Signal

./: .gitignore  .railwayignore  DEMO_SCRIPT.md  DOCUMENTATION.md  Procfile  README.md  main.py  netlify.toml  nixpacks.toml  railpack.json  render.yaml  requirements-demo.txt
.next/: trace  trace-build
backend/: alembic.ini  pyproject.toml
backend/alembic/versions/: 0002_thesis_applications_signals.py
backend/app/: __init__.py  main.py  tracing.py
backend/app/agents/: __init__.py  aggregator.py  founder.py  idea_vs_market.py  ingestion.py  market.py  validator.py
backend/app/agents/prompts/: aggregator.txt  founder.txt  market.txt  validator.txt
backend/app/api/: router.py
backend/app/api/routes/: admin.py  applications.py  events.py  fin.py  founders.py  inbox.py  outbound.py  query.py  thesis.py  traces.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/graph/: nodes.py  pipeline.py  reducers.py
backend/app/ingestion/: arxiv.py  dedupe.py  hackernews.py  producthunt.py
backend/app/llm/: client.py
backend/app/schemas/: agent_outputs.py  application.py  claim.py  thesis.py
backend/app/triggers/: __init__.py  rescore.py
backend/app/utils/: ratelimit.py
backend/tests/: test_adversarial_fixes.py  test_agents.py  test_dedupe.py  test_embeddings.py  test_frontend.py  test_ingestion_modules.py  test_outbound_scan.py  test_schemas.py  test_tier_c.py  test_triggers.py
dataset/: README.md  index.json
docs/: BUILD_SPEC.md
frontend/: .gitignore  index.html  package-lock.json  tsconfig.json  vite.config.ts
infra/: docker-compose.yml
scripts/: demo_api.py  (+6 more)
(+239 files in other folders)
