[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vc-brain-backend"
version = "0.1.0"
description = "VC Brain — agentic investment screening OS"
requires-python = ">=3.12"
readme = "../README.md"

dependencies = [
  # Web framework
  "fastapi>=0.139.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  # DB
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "pgvector>=0.3.6",
  # LangGraph + Langfuse
  "langgraph>=1.2.0",
  "langgraph-checkpoint-postgres>=2.0.10",
  "langfuse>=3.0.0",
  # LLM
  "openai>=1.55.0",
  "langchain-openai>=0.2.0",
  # Ingestion
  "httpx>=0.28.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "rapidfuzz>=3.10.0",
  # Embeddings
  "sentence-transformers>=3.3.0",
  "numpy>=1.26.0",
  # PDF parsing (for deck ingestion)
  "pypdf>=5.1.0",
  # Utilities
  "python-multipart>=0.0.12",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
  "integration: requires live Postgres",
  "slow: long-running test",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
